[gd_scene load_steps=5 format=3 uid="uid://qh18kwxgp2xg"]

[ext_resource type="Texture2D" uid="uid://exgp77tsrmso" path="res://icon.svg" id="1_r2426"]
[ext_resource type="Script" path="res://demo/fx/main.gd" id="1_vdtn1"]
[ext_resource type="Script" path="res://addons/godot-jam-toolkit/fx/hfx_shake_2d.gd" id="2_5hrdu"]
[ext_resource type="Script" path="res://addons/godot-jam-toolkit/fx/hfx_move_2d.gd" id="4_1u323"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vdtn1")

[node name="ShakeLabel" type="Label" parent="."]
offset_left = 119.0
offset_top = 12.0
offset_right = 214.0
offset_bottom = 35.0
text = "Shake Effect"

[node name="Icon1" type="Sprite2D" parent="."]
position = Vector2(170, 137)
texture = ExtResource("1_r2426")

[node name="HFXShake2D" type="Node" parent="Icon1" node_paths=PackedStringArray("target_node")]
script = ExtResource("2_5hrdu")
target_node = NodePath("..")
shake_strength = Vector2(10, 10)
duration = 20.0
shake_strength_fade_in_duration = 5.0
shake_strength_fade_out_duration = 5.0

[node name="MoveLabel" type="Label" parent="."]
offset_left = 649.0
offset_top = 19.0
offset_right = 744.0
offset_bottom = 42.0
text = "Move Effect with auto restart"

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(387, 139)
texture = ExtResource("1_r2426")

[node name="HFXMove2D" type="Node" parent="Icon2" node_paths=PackedStringArray("target_node")]
script = ExtResource("4_1u323")
target_node = NodePath("..")
movement = Vector2(550, 2.08165e-12)
duration = 2.0
queue_free_on_finish = false

[node name="ShakeMoveEffect" type="Label" parent="."]
offset_left = 490.0
offset_top = 241.0
offset_right = 716.0
offset_bottom = 264.0
text = "Shake and Move effects"

[node name="Icon3" type="Sprite2D" parent="."]
position = Vector2(94, 350)
texture = ExtResource("1_r2426")

[node name="HFXMove2D" type="Node" parent="Icon3" node_paths=PackedStringArray("target_node")]
script = ExtResource("4_1u323")
target_node = NodePath("..")
movement = Vector2(800, 2.08165e-12)
duration = 5.0
queue_free_on_finish = false

[node name="HFXShake2D" type="Node" parent="Icon3" node_paths=PackedStringArray("target_node")]
script = ExtResource("2_5hrdu")
target_node = NodePath("..")
shake_strength = Vector2(10, 10)
randomize_shake_strength = true
duration = 10.0
queue_free_on_finish = false

[connection signal="finished" from="Icon2/HFXMove2D" to="." method="_on_hfx_move_2d_finished"]
[connection signal="finished" from="Icon3/HFXMove2D" to="." method="_on_hfx_move_multi_effect_finished"]
[connection signal="finished" from="Icon3/HFXShake2D" to="." method="_on_hfx_shake_multi_effect_finished"]
